# my-finance

./: .gitignore  Makefile  README.md  alembic.ini  myfinance.db  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
docs/: Projeto_Integrado_Rafael_Lacerda_Etapa_I.docx
makefiles/: test.mk
migrations/: env.py
migrations/versions/: 33fad35eb9a9_create_a_baseline_migration.py
my_finance/: __init__.py  main.py
my_finance/database/: __init__.py  models.py  session.py
my_finance/database/services/: transactions.py  users.py
my_finance/routers/: expense.py  income.py  login.py  main.py  root.py  transactions.py
my_finance/services/: transaction_service.py
my_finance/utils/: auth.py  settings.py
scripts/: entrypoint.sh
static/css/: login.css  main.css  trans_list.css  transaction.css
templates/: expense.html  income.html  login.html  main.html  transactions.html
